--- a/src/entries/popup/index.css
+++ b/src/entries/popup/index.css
@@ -2,8 +2,3 @@ body {
   width: 357px !important;
   height: 600px !important;
 }
-
-html {
-  /* min-height: 500px !important; */
-  overflow: inherit !important;
-}
